Resources/Parsers/asm/asm8086/asm8086Parser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/asm/asm8086/asm8086.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import asm8086Listener from './asm8086Listener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class asm8086Parser extends antlr4.Parser {

    static grammarFileName = "asm8086.g4";
    static literalNames = [ null, "'BYTE'", "'WORD'", "'DWORD'", "'DSEG'", 
                            "'CSEG'", "'INCLUDE'", "'TITLE'", "'END'", "'ORG'", 
                            "'ENDIF'", "'IF'", "'EQU'", "'DW'", "'DB'", 
                            "'DD'", "'PTR'", "'OFFSET'", "'RW'", "'RB'", 
                            "'RS'", "'LENGTH'", "'EQ'", "'NE'", "'MOD'", 
                            null, "'AH'", "'AL'", "'BH'", "'BL'", "'CH'", 
                            "'CL'", "'DH'", "'DL'", "'AX'", "'BX'", "'CX'", 
                            "'DX'", "'CI'", "'DI'", "'BP'", "'SP'", "'IP'", 
                            "'CS'", "'DS'", "'ES'", "'SS'", "'AAA'", "'AAD'", 
                            "'AAM'", "'AAS'", "'ADC'", "'ADD'", "'AND'", 
                            "'CALL'", "'CBW'", "'CLC'", "'CLD'", "'CLI'", 
                            "'CMC'", "'CMP'", "'CMPSB'", "'CMPSW'", "'CWD'", 
                            "'DAA'", "'DAS'", "'DEC'", "'DIV'", "'ESC'", 
                            "'HLT'", "'IDIV'", "'IMUL'", "'IN'", "'INC'", 
                            "'INT'", "'INTO'", "'IRET'", "'JA'", "'JAE'", 
                            "'JB'", "'JBE'", "'JC'", "'JE'", "'JG'", "'JGE'", 
                            "'JL'", "'JLE'", "'JNA'", "'JNAE'", "'JNB'", 
                            "'JNBE'", "'JNC'", "'JNE'", "'JNG'", "'JNGE'", 
                            "'JNL'", "'JNLE'", "'JNO'", "'JNP'", "'JNS'", 
                            "'JNZ'", "'JO'", "'JP'", "'JPE'", "'JPO'", "'JS'", 
                            "'JZ'", "'JCXZ'", "'JMP'", "'JMPS'", "'JMPF'", 
                            "'LAHF'", "'LDS'", "'LEA'", "'LES'", "'LOCK'", 
                            "'LODS'", "'LODSB'", "'LODSW'", "'LOOP'", "'LOOPE'", 
                            "'LOOPNE'", "'LOOPNZ'", "'LOOPZ'", "'MOV'", 
                            "'MOVS'", "'MOVSB'", "'MOVSW'", "'MUL'", "'NEG'", 
                            "'NOP'", "'NOT'", "'OR'", "'OUT'", "'POP'", 
                            "'POPF'", "'PUSH'", "'PUSHF'", "'RCL'", "'RCR'", 
                            "'RET'", "'RETN'", "'RETF'", "'ROL'", "'ROR'", 
                            "'SAHF'", "'SAL'", "'SAR'", "'SALC'", "'SBB'", 
                            "'SCASB'", "'SCASW'", "'SHL'", "'SHR'", "'STC'", 
                            "'STD'", "'STI'", "'STOSB'", "'STOSW'", "'SUB'", 
                            "'TEST'", "'WAIT'", "'XCHG'", "'XLAT'", "'XOR'", 
                            "'REP'", "'REPE'", "'REPNE'", "'REPNZ'", "'REPZ'", 
                            "'*'", "'/'", "'$'", "'+'", "'-'", "'!'", "':'", 
                            "'.'", "'('", "')'", "','", "';'", "'['", "']'" ];
    static symbolicNames = [ null, "BYTE", "WORD", "DWORD", "DSEG", "CSEG", 
                             "INCLUDE", "TITLE", "END", "ORG", "ENDIF", 
                             "IF", "EQU", "DW", "DB", "DD", "PTR", "OFFSET", 
                             "RW", "RB", "RS", "LENGTH", "EQ", "NE", "MOD", 
                             "COMMENT", "AH", "AL", "BH", "BL", "CH", "CL", 
                             "DH", "DL", "AX", "BX", "CX", "DX", "CI", "DI", 
                             "BP", "SP", "IP", "CS", "DS", "ES", "SS", "AAA", 
                             "AAD", "AAM", "AAS", "ADC", "ADD", "AND", "CALL", 
                             "CBW", "CLC", "CLD", "CLI", "CMC", "CMP", "CMPSB", 
                             "CMPSW", "CWD", "DAA", "DAS", "DEC", "DIV", 
                             "ESC", "HLT", "IDIV", "IMUL", "IN", "INC", 
                             "INT", "INTO", "IRET", "JA", "JAE", "JB", "JBE", 
                             "JC", "JE", "JG", "JGE", "JL", "JLE", "JNA", 
                             "JNAE", "JNB", "JNBE", "JNC", "JNE", "JNG", 
                             "JNGE", "JNL", "JNLE", "JNO", "JNP", "JNS", 
                             "JNZ", "JO", "JP", "JPE", "JPO", "JS", "JZ", 
                             "JCXZ", "JMP", "JMPS", "JMPF", "LAHF", "LDS", 
                             "LEA", "LES", "LOCK", "LODS", "LODSB", "LODSW", 
                             "LOOP", "LOOPE", "LOOPNE", "LOOPNZ", "LOOPZ", 
                             "MOV", "MOVS", "MOVSB", "MOVSW", "MUL", "NEG", 
                             "NOP", "NOT", "OR", "OUT", "POP", "POPF", "PUSH", 
                             "PUSHF", "RCL", "RCR", "RET", "RETN", "RETF", 
                             "ROL", "ROR", "SAHF", "SAL", "SAR", "SALC", 
                             "SBB", "SCASB", "SCASW", "SHL", "SHR", "STC", 
                             "STD", "STI", "STOSB", "STOSW", "SUB", "TEST", 
                             "WAIT", "XCHG", "XLAT", "XOR", "REP", "REPE", 
                             "REPNE", "REPNZ", "REPZ", "STAR", "SLASH", 
                             "DOLLAR", "PLUS", "MINUS", "NOT_", "COLON", 
                             "DOT", "RP", "LP", "COMMA", "SEMI", "LB", "RB_", 
                             "NAME", "NUMBER", "STRING", "EOL", "WS" ];
    static ruleNames = [ "prog", "line", "instruction", "lbl", "assemblerdirective", 
                         "rw", "rb", "rs", "cseg", "dseg", "dw", "db", "dd", 
                         "equ", "if_", "assemblerexpression", "assemblerlogical", 
                         "assemblerterm", "endif_", "end", "org", "title", 
                         "include_", "expressionlist", "label", "expression", 
                         "multiplyingExpression", "argument", "ptr", "dollar", 
                         "register_", "string_", "name", "number", "opcode", 
                         "rep", "sign" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = asm8086Parser.ruleNames;
        this.literalNames = asm8086Parser.literalNames;
        this.symbolicNames = asm8086Parser.symbolicNames;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, asm8086Parser.RULE_prog);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1896432) !== 0) || ((((_la - 47)) & ~0x1f) === 0 && ((1 << (_la - 47)) & 4294967295) !== 0) || ((((_la - 79)) & ~0x1f) === 0 && ((1 << (_la - 79)) & 4294967295) !== 0) || ((((_la - 111)) & ~0x1f) === 0 && ((1 << (_la - 111)) & 4294967295) !== 0) || ((((_la - 143)) & ~0x1f) === 0 && ((1 << (_la - 143)) & 134217727) !== 0) || ((((_la - 175)) & ~0x1f) === 0 && ((1 << (_la - 175)) & 4613) !== 0)) {
	            this.state = 74;
	            this.line();
	            this.state = 79;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 80;
	        this.match(asm8086Parser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, asm8086Parser.RULE_line);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        if(la_===1) {
	            this.state = 82;
	            this.lbl();

	        }
	        this.state = 87;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 11:
	        case 13:
	        case 14:
	        case 15:
	        case 18:
	        case 19:
	        case 20:
	        case 177:
	        case 184:
	        	this.state = 85;
	        	this.assemblerdirective();
	        	break;
	        case 47:
	        case 48:
	        case 49:
	        case 50:
	        case 51:
	        case 52:
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	        case 62:
	        case 63:
	        case 64:
	        case 65:
	        case 66:
	        case 67:
	        case 68:
	        case 69:
	        case 70:
	        case 71:
	        case 72:
	        case 73:
	        case 74:
	        case 75:
	        case 76:
	        case 77:
	        case 78:
	        case 79:
	        case 80:
	        case 81:
	        case 82:
	        case 83:
	        case 84:
	        case 85:
	        case 86:
	        case 87:
	        case 88:
	        case 89:
	        case 90:
	        case 91:
	        case 92:
	        case 93:
	        case 94:
	        case 95:
	        case 96:
	        case 97:
	        case 98:
	        case 99:
	        case 100:
	        case 101:
	        case 102:
	        case 103:
	        case 104:
	        case 105:
	        case 106:
	        case 107:
	        case 108:
	        case 109:
	        case 110:
	        case 111:
	        case 112:
	        case 113:
	        case 114:
	        case 115:
	        case 116:
	        case 117:
	        case 118:
	        case 119:
	        case 120:
	        case 121:
	        case 122:
	        case 123:
	        case 124:
	        case 125:
	        case 126:
	        case 127:
	        case 128:
	        case 129:
	        case 130:
	        case 131:
	        case 132:
	        case 133:
	        case 134:
	        case 135:
	        case 136:
	        case 137:
	        case 138:
	        case 139:
	        case 140:
	        case 141:
	        case 142:
	        case 143:
	        case 144:
	        case 145:
	        case 146:
	        case 147:
	        case 148:
	        case 149:
	        case 150:
	        case 151:
	        case 152:
	        case 153:
	        case 154:
	        case 155:
	        case 156:
	        case 157:
	        case 158:
	        case 159:
	        case 160:
	        case 161:
	        case 162:
	        case 163:
	        case 164:
	        case 165:
	        case 166:
	        case 167:
	        case 168:
	        case 169:
	        	this.state = 86;
	        	this.instruction();
	        	break;
	        case 175:
	        case 187:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 93;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===175) {
	            this.state = 89;
	            this.match(asm8086Parser.NOT_);
	            this.state = 90;
	            this.instruction();
	            this.state = 95;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 96;
	        this.match(asm8086Parser.EOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, asm8086Parser.RULE_instruction);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 165)) & ~0x1f) === 0 && ((1 << (_la - 165)) & 31) !== 0)) {
	            this.state = 98;
	            this.rep();
	        }

	        this.state = 101;
	        this.opcode();
	        this.state = 103;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 4230152206) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 32767) !== 0) || _la===131 || ((((_la - 172)) & ~0x1f) === 0 && ((1 << (_la - 172)) & 29767) !== 0)) {
	            this.state = 102;
	            this.expressionlist();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lbl() {
	    let localctx = new LblContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, asm8086Parser.RULE_lbl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.label();
	        this.state = 107;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===176) {
	            this.state = 106;
	            this.match(asm8086Parser.COLON);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assemblerdirective() {
	    let localctx = new AssemblerdirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, asm8086Parser.RULE_assemblerdirective);
	    try {
	        this.state = 125;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 109;
	            this.org();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 110;
	            this.end();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 111;
	            this.if_();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 112;
	            this.endif_();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 113;
	            this.equ();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 114;
	            this.db();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 115;
	            this.dw();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 116;
	            this.cseg();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 117;
	            this.dd();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 118;
	            this.dseg();
	            break;

	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 119;
	            this.title();
	            break;

	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 120;
	            this.include_();
	            break;

	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 121;
	            this.rw();
	            break;

	        case 14:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 122;
	            this.rb();
	            break;

	        case 15:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 123;
	            this.rs();
	            break;

	        case 16:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 124;
	            this.match(asm8086Parser.DOT);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rw() {
	    let localctx = new RwContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, asm8086Parser.RULE_rw);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===184) {
	            this.state = 127;
	            this.name();
	        }

	        this.state = 130;
	        this.match(asm8086Parser.RW);
	        this.state = 131;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rb() {
	    let localctx = new RbContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, asm8086Parser.RULE_rb);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===184) {
	            this.state = 133;
	            this.name();
	        }

	        this.state = 136;
	        this.match(asm8086Parser.RB);
	        this.state = 137;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rs() {
	    let localctx = new RsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, asm8086Parser.RULE_rs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===184) {
	            this.state = 139;
	            this.name();
	        }

	        this.state = 142;
	        this.match(asm8086Parser.RS);
	        this.state = 143;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cseg() {
	    let localctx = new CsegContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, asm8086Parser.RULE_cseg);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.match(asm8086Parser.CSEG);
	        this.state = 147;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 4230152206) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 32767) !== 0) || _la===131 || ((((_la - 172)) & ~0x1f) === 0 && ((1 << (_la - 172)) & 29767) !== 0)) {
	            this.state = 146;
	            this.expression();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


